# HiggsLM

./: .gitignore  analysis.md  data.ipynb  data_download.py  datatrove_fineweb10B.py  download_gsm8k.py  fineweb_speedup.py  gsm8k.py  mini_pre_train.sh  pyproject.toml  requirements.txt  run.ipynb  run.py  tokenisation.py  train.py
.deepeval/: .deepeval_telemetry.txt
HiggsLM.egg-info/: PKG-INFO  SOURCES.txt
llm/: checkpoint_manager.py  dataloader.py  engine.py  eval_manager.py  gpt.py  lr.py  optimizer.py  tokenizer.py
llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pretraining/: dataloader.py  model.py  muon.py  rope.py
scripts/: chat_pre_train.py  pre-train.py  pre_train.py  reinforcement_learning.py
wandb/: latest-run
wandb/run-20260227_102913-4rfbngh0/: run-4rfbngh0.wandb
wandb/run-20260227_102928-34y62zd6/: run-34y62zd6.wandb
wandb/run-20260227_104021-km2fd92z/: run-km2fd92z.wandb
wandb/run-20260227_104219-mx641ul2/: run-mx641ul2.wandb
wandb/run-20260227_104643-yp1x6q46/: run-yp1x6q46.wandb
wandb/run-20260227_173421-6632729b/: run-6632729b.wandb
wandb/run-20260227_173656-add1i2li/: run-add1i2li.wandb
wandb/run-20260227_233117-w9jze8ob/: run-w9jze8ob.wandb
wandb/run-20260228_085326-j8wji3ag/: run-j8wji3ag.wandb
wandb/run-20260228_091912-gxx0usnw/: run-gxx0usnw.wandb
wandb/run-20260228_091932-5vuzvlyz/: run-5vuzvlyz.wandb
wandb/run-20260228_091959-rdmsv5uv/: run-rdmsv5uv.wandb
wandb/run-20260228_092202-ytnwx2ff/: run-ytnwx2ff.wandb
wandb/run-20260228_092223-6wk6n2kd/: run-6wk6n2kd.wandb
(+160 files in other folders)
