[project]
name = "HiggsLM"
version = "0.1.0"
description = "Creating an LLM that is focued on Science"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.7.0",
    "deepeval>=3.9.4",
    "numpy>=2.4.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "wandb>=0.25.0",
]

[tool.setuptools]
packages = ["llm"]
